<resources>
    <string name="app_name">FazaAi(Projeto Pimentel)</string>
    <string name="e_mail">E-mail: </string>
    <string name="e_mail2">E-mail </string>
    <string name="senha">Senha: </string>
    <string name="senha2">Senha </string>
    <string name="tela_de_login">Tela de Login</string>
    <string name="login">Login</string>
    <string name="cadastrar_se">Cadastra-se</string>
    <string name="tela_de_cadastro">Tela de Cadastro Usuário</string>
    <string name="nome">Nome:</string>
    <string name="nome2">Nome</string>
    <string name="confirmar_senha">Confirmar Senha: </string>
    <string name="confirmar_senha2">Confirmar Senha</string>
    <string name="cancelar">Cancelar</string>
    <string name="selecione_sua_fun_o">Selecione sua função</string>
    <string name="administrador">Administrador</string>
    <string name="funcion_rio">Funcionário</string>
    <string name="cadastro_de_atividades">Cadastro de Atividades</string>
    <string name="titulo">Titulo:</string>
    <string name="insira_o_titulo_aqui">Insira o Titulo aqui</string>
    <string name="descri_o">Descrição:</string>
    <string name="data">Data:</string>
    <string name="funcionario">Funcionario:</string>
    <string name="atividades">Atividades</string>
    <string name="tituloComChaves">[Titulo]</string>
    <string name="descri_oComChaves">[Descrição]</string>
    <string name="prazo">Prazo:</string>
    <string name="prazoComChaves">[Prazo]</string>
    <string name="funcionarioComChaves">[Funcionario]</string>
    <string name="status">#Status</string>
    <string name="colocar_data_aqui">Colocar data aqui</string>
    <string name="cadastrar">cadastrar</string>
    <string name="todo">TODO</string>
    <string name="excluir">Excluir</string>
    <string name="alterar">Alterar</string>
    <string name="insira_a_função_responsável">Insira a função responsável</string>>
    <string-array name="resp">
        <item>Administrativo</item>
        <item>Almoxarifado</item>
        <item>Suporte TI</item>
        <item>Recursos Humanos</item>
        <item>Contabilidade</item>
        <item>Jurídico</item>
    </string-array>
</resources>