<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#581C87"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="334dp"
        android:layout_height="571dp"
        android:background="@drawable/telaloginstyles"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="314dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="20dp"
            android:shadowColor="@color/black"
            android:text="@string/tela_de_login"
            android:textAlignment="center"
            android:textColor="#64748B"
            android:textSize="30sp"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:text="@string/e_mail"
            android:textColor="#64748B"
            android:textSize="20sp"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/txemail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:background="@drawable/inputstyles"
            android:ems="10"
            android:hint="@string/e_mail2"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            tools:ignore="TouchTargetSizeCheck,TextContrastCheck,DuplicateSpeakableTextCheck" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/senha"
            android:textColor="#64748B"
            android:textSize="20sp"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/txsenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:background="@drawable/inputstyles"
            android:ems="10"
            android:hint="@string/senha2"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            tools:ignore="TouchTargetSizeCheck,DuplicateSpeakableTextCheck,TextContrastCheck" />

        <Button
            android:id="@+id/btnlogin"
            android:layout_width="250dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:background="@drawable/btnlogin"
            android:padding="10dp"
            android:text="@string/login"
            android:textColor="#ffffff"
            android:textSize="11sp"
            android:layout_marginBottom="15dp"/>

        <Button
            android:id="@+id/btncadastrar"
            android:layout_width="250dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:background="@drawable/btnsecondary"
            android:padding="10dp"
            android:text="@string/cadastrar_se"
            android:textColor="#9575CD"
            tools:ignore="TextContrastCheck" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>