<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VIsualizarAtividadesActivity"
    android:background="#581C87">

    <LinearLayout
        android:layout_width="334dp"
        android:layout_height="571dp"
        android:layout_marginTop="69dp"
        android:background="@drawable/telaloginstyles"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.494">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgsair"
                android:layout_width="32dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/todo"
                android:src="@drawable/img_sair"
                tools:ignore="ImageContrastCheck" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="243dp"
                android:layout_height="54dp"
                android:text="@string/atividades"
                android:textAlignment="center"
                android:textColor="#64748B"
                android:textSize="30sp" />

            <ImageView
                android:id="@+id/imgadicionar"
                android:layout_width="22dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/todo"
                android:src="@drawable/img_adicionar"
                tools:ignore="ImageContrastCheck" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView17"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/titulo"
            android:textColor="#64748B"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/txtitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="14sp"
            android:ems="10"
            android:hint="@string/tituloComChaves"
            android:textColorHint="#64748B"
            tools:ignore="TextContrastCheck,TouchTargetSizeCheck"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textColor="#64748B"/>

        <TextView
            android:id="@+id/textView19"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/descri_o"
            android:textColor="#64748B"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/txdescricao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="14sp"
            android:ems="10"
            android:hint="@string/descri_oComChaves"
            android:textColorHint="#64748B"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="TextContrastCheck,TouchTargetSizeCheck"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textColor="#64748B"/>

        <TextView
            android:id="@+id/textView21"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/prazo"
            android:textColor="#64748B"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/txprazo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="14sp"
            android:hint="@string/prazoComChaves"
            android:textColorHint="#64748B"
            android:ems="10"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="TextContrastCheck,TouchTargetSizeCheck"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textColor="#64748B"/>

        <TextView
            android:id="@+id/textView24"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/funcionario"
            android:textColor="#64748B"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/txfuncionario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="14sp"
            android:ems="10"
            android:hint="@string/funcionarioComChaves"
            android:textColorHint="#64748B"
            tools:ignore="TextContrastCheck,TouchTargetSizeCheck"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textColor="#64748B"/>

        <LinearLayout
            android:layout_width="318dp"
            android:layout_height="79dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/status"
                android:layout_width="match_parent"
                android:layout_height="34dp"
                android:text="@string/status"
                android:textAlignment="center"
                android:textColor="#64748B"
                android:textSize="25sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnexcluir"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="158dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="5dp"
                    android:background="@drawable/btnexcluir"
                    android:text="@string/excluir"
                    android:textColor="@color/black"
                    tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

                <Button
                    android:id="@+id/btnalterar"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/btnalterar"
                    android:text="@string/alterar"
                    android:textColor="@color/black"
                    tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:gravity="center">

            <ImageView
                android:id="@+id/imgprimeiro"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:backgroundTint="#0F172A"
                android:contentDescription="@string/todo"
                android:scaleType="fitXY"
                android:src="@drawable/botao_primeiro" />

            <ImageView
                android:id="@+id/imganterior"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="#0F172A"
                android:contentDescription="@string/todo"
                android:scaleType="fitXY"
                android:src="@drawable/botao_anterior" />

            <ImageView
                android:id="@+id/imgproximo"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/todo"
                android:scaleType="fitXY"
                android:src="@drawable/botao_proximo" />

            <ImageView
                android:id="@+id/imgultimo"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/todo"
                android:scaleType="fitXY"
                android:src="@drawable/botao_ultimo" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>