<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#581C87"
    tools:context=".CadastrarAtividadeActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/telaloginstyles"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:text="@string/cadastro_de_atividades"
                android:textAlignment="center"
                android:textColor="#64748B"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/titulo"
                android:textColor="#64748B"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/txtitulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/inputstyles"
                android:ems="10"
                android:hint="@string/insira_o_titulo_aqui"
                android:inputType="textPersonName"
                android:textColor="#64748B"
                tools:ignore="TouchTargetSizeCheck,TextContrastCheck"
                android:importantForAutofill="no" />
            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/descri_o"
                android:textColor="#64748B"
                android:textSize="20sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="138dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txdescricao"
                    android:layout_width="match_parent"
                    android:layout_height="140dp"
                    android:layout_gravity="start"
                    android:background="@drawable/inputstyles"
                    tools:ignore="SpeakableTextPresentCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/data"
                android:textColor="#64748B"
                android:textSize="20sp" />

            <Button
                android:id="@+id/datePickerButton"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:text="JAN 01 2021"
                android:textSize="20sp"
                android:textColor="@color/white"
                style="?android:spinnerStyle"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginTop="10dp"
                android:onClick="openDatePicker"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView14"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:text="@string/funcion_rio"
                    android:textColor="#64748B"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent" />

                <Spinner
                    android:id="@+id/spinner2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/telaloginstyles"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btncadastrar"
                    android:layout_width="250dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="15dp"
                    android:background="@drawable/btncadastra_se"
                    android:padding="10dp"
                    android:text="@string/cadastrar"
                    android:textColor="#ffffff"
                    android:textSize="11sp" />

                <Button
                    android:id="@+id/btncancelar"
                    android:layout_width="250dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center"
                    android:background="@drawable/btnsecondary"
                    android:padding="10dp"
                    android:text="@string/cancelar"
                    android:textColor="#9575CD"
                    tools:ignore="TextContrastCheck" />
        </LinearLayout>



        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>